--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,8 +17,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
-  schedule:
-    - cron: '28 18 * * 3'
+  #schedule:
+  #  - cron: '28 18 * * 3'
 
 jobs:
   analyze:
